Добавил стили на шапку

--- a/index.html
+++ b/index.html
@@ -12,19 +12,29 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <header class="page-header list">
+      <div class="user-header">
+        <a href="tel:123-123456789" class="tel-link">123-123456789</a>
+        <a href="mailto:info@ltnt.com" class="mail-link">info@ltnt.com</a>
+        <ul class="user-nav list">
+          <li class="user-nav-item">
+            <a href="" class="user-nav-link">My Account</a>
+          </li>
+          <li class="user-nav-item">
+            <a href="" class="user-nav-link">Wishlist</a>
+          </li>
+          <li class="user-nav-item">
+            <a href="" class="user-nav-link">Cart</a>
+          </li>
+          <li class="user-nav-item">
+            <a href="" class="user-nav-link">Checkout</a>
+          </li>
+          <li class="user-nav-item">
+            <a href="" class="user-nav-link">Login/Register</a>
+          </li>
+        </ul>
+      </div>
       <div class="container">
-        <div class="user-header">
-          <a href="tel:123-123456789">123-123456789</a>
-          <a href="mailto:info@ltnt.com">info@ltnt.com</a>
-          <ul class="user-nav list">
-            <li><a href="" class="user-nav-link">My Account</a></li>
-            <li><a href="" class="user-nav-link">Wishlist</a></li>
-            <li><a href="" class="user-nav-link">Cart</a></li>
-            <li><a href="" class="user-nav-link">Checkout</a></li>
-            <li><a href="" class="user-nav-link">Login/Register</a></li>
-          </ul>
-        </div>
         <nav class="page-nav">
           <a href="" class="site-logo">Mart</a>
           <ul class="site-nav list">
@@ -37,6 +47,9 @@
           </ul>
         </nav>
       </div>
+    </header>
+
+    <main>
       <div class="banner">
         <div class="hero">
           <h1>
@@ -50,9 +63,6 @@
           <a href="" class="hero-link">Buy now</a>
         </div>
       </div>
-    </header>
-
-    <main>
       <section class="section-advantages">
         <div class="container">
           <ul class="advantages-list list">
