Готово, все сделал

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:300,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/pe-icon-7-stroke.css">
+    <link rel="stylesheet" href="./css/pe-icon-7-stroke.css" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -115,11 +115,13 @@
           <ul class="product-list list">
             <li class="product-list-item">
               <a href="" class="product-link">
-                <img
-                  src="./images/blue-tshirt.jpg"
-                  alt="blue-tshirt"
-                  width="255"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/blue-tshirt.jpg"
+                    alt="blue-tshirt"
+                    width="255"
+                  />
+                </div>
                 <div class="product-info">
                   <p class="product-name list">Blue tshirt</p>
                   <p class="product-price list">$26</p>
@@ -128,11 +130,13 @@
             </li>
             <li class="product-list-item">
               <a href="" class="product-link">
-                <img
-                  src="./images/woman-shirt.jpg"
-                  alt="woman-shirt"
-                  width="255"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/woman-shirt.jpg"
+                    alt="woman-shirt"
+                    width="255"
+                  />
+                </div>
                 <div class="product-info">
                   <p class="product-name list">Woman shirt</p>
                   <p class="product-price list">$31</p>
@@ -141,11 +145,13 @@
             </li>
             <li class="product-list-item">
               <a href="" class="product-link">
-                <img
-                  src="./images/yellow-tshirt.jpg"
-                  alt="yellow-tshirt"
-                  width="255"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/yellow-tshirt.jpg"
+                    alt="yellow-tshirt"
+                    width="255"
+                  />
+                </div>
                 <div class="product-info">
                   <p class="product-name list">Yellow tshirt</p>
                   <p class="product-price list">$21</p>
@@ -154,11 +160,13 @@
             </li>
             <li class="product-list-item">
               <a href="" class="product-link">
-                <img
-                  src="./images/cool-lingerie.jpg"
-                  alt="cool-lingerie"
-                  width="255"
-                />
+                <div class="overlay">
+                  <img
+                    src="./images/cool-lingerie.jpg"
+                    alt="cool-lingerie"
+                    width="255"
+                  />
+                </div>
                 <div class="product-info">
                   <p class="product-name list">Cool lingerie</p>
                   <p class="product-price list">$56</p>
@@ -175,7 +183,9 @@
           <ul class="product-list list">
             <li class="product-list-item">
               <a href="" class="product-link">
-                <img src="./images/product1.jpg" alt="shoes" width="255" />
+                <div class="overlay">
+                  <img src="./images/product1.jpg" alt="shoes" width="255" />
+                </div>
                 <div class="product-info">
                   <p class="product-name list">Blue tshirt</p>
                   <p class="product-price list">$26</p>
@@ -184,7 +194,9 @@
             </li>
             <li class="product-list-item">
               <a href="" class="product-link">
-                <img src="./images/product2.jpg" alt="belt" width="255" />
+                <div class="overlay">
+                  <img src="./images/product2.jpg" alt="belt" width="255" />
+                </div>
                 <div class="product-info">
                   <p class="product-name list">Woman shirt</p>
                   <p class="product-price list">$31</p>
@@ -193,7 +205,9 @@
             </li>
             <li class="product-list-item">
               <a href="" class="product-link">
-                <img src="./images/product3.jpg" alt="hat" width="255" />
+                <div class="overlay">
+                  <img src="./images/product3.jpg" alt="hat" width="255" />
+                </div>
                 <div class="product-info">
                   <p class="product-name list">Yellow tshirt</p>
                   <p class="product-price list">$21</p>
@@ -202,7 +216,9 @@
             </li>
             <li class="product-list-item">
               <a href="" class="product-link">
-                <img src="./images/product4.jpg" alt="bag" width="255" />
+                <div class="overlay">
+                  <img src="./images/product4.jpg" alt="bag" width="255" />
+                </div>
                 <div class="product-info">
                   <p class="product-name list">Cool lingerie</p>
                   <p class="product-price list">$56</p>
@@ -211,7 +227,9 @@
             </li>
             <li class="product-list-item">
               <a href="" class="product-link">
-                <img src="./images/product5.jpg" alt="hand-bag" width="255" />
+                <div class="overlay">
+                  <img src="./images/product5.jpg" alt="hand-bag" width="255" />
+                </div>
                 <div class="product-info">
                   <p class="product-name list">Blue tshirt</p>
                   <p class="product-price list">$26</p>
@@ -220,7 +238,9 @@
             </li>
             <li class="product-list-item">
               <a href="" class="product-link">
-                <img src="./images/product6.jpg" alt="belt" width="255" />
+                <div class="overlay">
+                  <img src="./images/product6.jpg" alt="belt" width="255" />
+                </div>
                 <div class="product-info">
                   <p class="product-name list">Woman shirt</p>
                   <p class="product-price list">$31</p>
@@ -229,7 +249,9 @@
             </li>
             <li class="product-list-item">
               <a href="" class="product-link">
-                <img src="./images/product7.jpg" alt="shoes" width="255" />
+                <div class="overlay">
+                  <img src="./images/product7.jpg" alt="shoes" width="255" />
+                </div>
                 <div class="product-info">
                   <p class="product-name list">Yellow tshirt</p>
                   <p class="product-price list">$21</p>
@@ -238,7 +260,9 @@
             </li>
             <li class="product-list-item">
               <a href="" class="product-link">
-                <img src="./images/product8.jpg" alt="glass" width="255" />
+                <div class="overlay">
+                  <img src="./images/product8.jpg" alt="glass" width="255" />
+                </div>
                 <div class="product-info">
                   <p class="product-name list">Cool lingerie</p>
                   <p class="product-price list">$56</p>
